# everything-ros2

./: .gitignore  README.md  ros1_kobuki_simplified.urdf  ros1_simple_robot.urdf  ros2_kobuki_converted.urdf  ros2_simple_robot.urdf
.claude-plugin/: marketplace.json
everything-ros2-claude-code/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETION_CERTIFICATE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FINAL_PROJECT_SUMMARY.md  GEMINI.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  SECURITY.md  evaluation_report.txt  install.sh  package.json  test_ros1_robot.urdf
everything-ros2-claude-code/.claude-plugin/: marketplace.json  plugin.json
everything-ros2-claude-code/.clinerules/: ros2-rules.md
everything-ros2-claude-code/.cursor/rules/: rclcpp-rules.mdc  rclpy-rules.mdc  ros2-fundamentals.mdc
everything-ros2-claude-code/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release.yml
everything-ros2-claude-code/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
everything-ros2-claude-code/.github/workflows/: ci.yml
everything-ros2-claude-code/.windsurf/rules/: ros2-rules.md
everything-ros2-claude-code/agents/: colcon-agent.md  dds-tuner.md  distro-compat-agent.md  executor-agent.md  hardware-compat-agent.md  interface-agent.md  launch-agent.md  launch-architect.md  lifecycle-agent.md  micro-ros-agent.md  moveit2-agent.md  nav2-agent.md  package-structure-agent.md  qos-agent.md  realtime-agent.md  ros1-migrator.md  ros2-control-agent.md  ros2-orchestrator.md  safety-agent.md  sros2-secops.md  test-engineer.md  tf2-agent.md  tf2-cartographer.md  topic-schema-agent.md  ubuntu-system-agent.md  urdf-validator.md
everything-ros2-claude-code/commands/: colcon-fix.md  distro-check.md  interface-check.md  launch-validate.md  pkg-check.md  qos-audit.md  ros2-new-pkg.md  ros2-plan.md  ros2-validate.md  specialized-agents.md  tf-tree.md  topic-audit.md  urdf-check.md
everything-ros2-claude-code/contexts/: dev.md  review.md
everything-ros2-claude-code/docs/: debugging-guide.md  distro-migration-guide.md
everything-ros2-claude-code/examples/custom-bt-plugin/: README.md
everything-ros2-claude-code/examples/docker-robot-stack/: README.md
everything-ros2-claude-code/examples/lifecycle-sensor-driver/: README.md
everything-ros2-claude-code/examples/micro-ros-esp32/: README.md
everything-ros2-claude-code/examples/minimal-publisher/: README.md
everything-ros2-claude-code/examples/multi-robot-fleet/: README.md
everything-ros2-claude-code/examples/ros2-control-diffbot/: README.md
everything-ros2-claude-code/examples/safety-node/: README.md
everything-ros2-claude-code/examples/systemd-robot-service/: README.md
everything-ros2-claude-code/hooks/: hooks.json
everything-ros2-claude-code/mcp-configs/: mcp-servers.json
everything-ros2-claude-code/test_inputs/ros1_diffbot/: CMakeLists.txt  README.md  package.xml
everything-ros2-claude-code/test_inputs/ros1_diffbot/launch/: robot.launch
everything-ros2-claude-code/test_inputs/ros1_diffbot/src/: diff_drive.cpp  odom_publisher.py
everything-ros2-claude-code/test_outputs/ros2_diffbot/: CMakeLists.txt  package.xml
everything-ros2-claude-code/test_outputs/ros2_diffbot/config/: diff_drive_controller.yaml
everything-ros2-claude-code/test_outputs/ros2_diffbot/launch/: robot.launch.py
everything-ros2-claude-code/test_outputs/ros2_diffbot/src/: diff_drive.cpp  odom_publisher.py
everything-ros2-claude-code/test_outputs/ros2_diffbot/urdf/: robot.urdf
everything-ros2-claude-code/tests/: evaluation_framework.py  run_agent_tests.py  run_all_tests.py  test_agent_skill_validation.py  test_agents_skills_functionality.py  test_orchestrator.py
ros2_conversion_examples/: README.md  SUMMARY.md  conversion_guide.md  simple_robot_ros1.urdf  simple_robot_ros1.xacro  simple_robot_ros2.urdf  simple_robot_ros2.xacro  test_conversion_agent.py  validation_script.sh
(+35 files in other folders)
