<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_robot</name>
  <version>0.1.0</version>
  <description>A ROS2 differential drive robot (migrated from ROS1)</description>
  <maintainer email="dev@robot.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
